# bankingsoftware

./: CMakeLists.txt
assets/shaders/: fragment_shader.glsl
src/: main.cpp
src/game/: game.cpp  game.h  path_config.h.in
src/game/engine/: collision_handler.cpp  collision_handler.h  texture_library.cpp  texture_library.h
src/game/engine/audio/: audio_manager.cpp  audio_manager.h
src/game/engine/shader/: shader.cpp  shader.h
src/game/engine/utilities/: file_utils.h
src/game/entities/: bullet.cpp  bullet.h  collectible.cpp  collectible.h  enemy_entity.cpp  enemy_entity.h  entity.cpp  entity.h  player_entity.cpp  player_entity.h
src/game/entities/collectibles/: addshield.cpp  addshield.h  rateoffire.cpp  rateoffire.h
src/game/entities/enemies/: buoy.cpp  buoy.h
src/game/entities/interfaces/: shooter.cpp  shooter.h
src/game/object/: collider.cpp  collider.h  effect_object.cpp  effect_object.h  follower_object.cpp  follower_object.h  game_object.cpp  game_object.h
src/game/object/colliders/: circle_collider.cpp  circle_collider.h  ray_collider.cpp  ray_collider.h
src/game/object/followers/: orbiter.cpp  orbiter.h  shield.cpp  shield.h
src/game/object/interfaces/: parent_entity.cpp  parent_entity.h
src/game/utilities/: util.cpp  util.h
